--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -30,7 +30,7 @@
                 <li class="mr"><a href="/?video_id={$next_video_id}" style="color:#fff">下台↓</a></li>
             </ul>
             <div class="gunad">
-                <marquee scrollamount="3">请点下网址&quot;收藏&quot;或-点右上角&quot;在聊天置顶或◎浮窗&quot;可置顶快捷看视频</marquee>
+                <marquee scrollamount="3">方便下次观看，请点击右上角按钮↑，❤收藏❤本网址</marquee>
             </div>
             <div class="pindao">
                 <ul id="mlist">
