--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>港澳台视频直播在线观看</title>
+    <title>港澳台电视直播在线观看</title>
     <meta charset="UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -55,6 +55,55 @@
         </div>
     </div>
 </div>
+<script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<script>
+    wx.config({
+        debug: true,
+        appId: "{$signPackage['appId']}",
+        timestamp: "{$signPackage['timestamp']}",
+        nonceStr: "{$signPackage['nonceStr']}",
+        signature: "{$signPackage['signature']}",
+        jsApiList: [
+            'checkJsApi',
+            'onMenuShareTimeline',
+            'onMenuShareAppMessage',
+        ]
+    });
+
+    wx.ready(function(){
+        wx.onMenuShareTimeline({
+            title: '港澳台电视正在直播中，快来观看！', // 分享标题
+            link: 'http://wx.haixialiangan.wang?share_id={$user_id}', // 分享链接，该链接域名或路径必须与当前页面对应的公众号JS安全域名一致
+            imgUrl: 'http://wx.haixialiangan.wang/assets/img/time.jpg', // 分享图标
+            success: function () {
+                alert('分享成功1');
+                // 用户确认分享后执行的回调函数
+            },
+            cancel: function () {
+                alert('分享失败1');
+                // 用户取消分享后执行的回调函数
+            }
+        });
+        wx.onMenuShareAppMessage({
+            title: '港澳台电视正在直播中，快来观看', // 分享标题
+            desc: '港澳台电视直播、电影在线观看', // 分享描述
+            link: 'http://wx.haixialiangan.wang?share_id={$user_id}', // 分享链接，该链接域名或路径必须与当前页面对应的公众号JS安全域名一致
+            imgUrl: 'http://wx.haixialiangan.wang/assets/img/time.jpg', // 分享图标
+            type: 'link', // 分享类型,music、video或link，不填默认为link
+            dataUrl: '', // 如果type是music或video，则要提供数据链接，默认为空
+            success: function () {
+                alert('分享成功');
+                // 用户确认分享后执行的回调函数
+            },
+            cancel: function () {
+                alert('分享失败');
+                // 用户取消分享后执行的回调函数
+            }
+        });
+    });
+</script>
+
+
 <script>
     var _hmt = _hmt || [];
     (function() {
