--- a/application/index/view/index/assit.html
+++ b/application/index/view/index/assit.html
@@ -37,7 +37,7 @@
                             <br/>
                         </p>
                         <p>
-                            <input type="url" value="http://wx.haixialiangan.wang?share_id={$user_id}" style="width: 98%;height: 40px;line-height: 40px;padding-left: 5px;font-weight: bold;font-size: 1.2em;">
+                            <input type="url" value="http://wx.haixialiangan.wang/?share_id={$user_id}" style="width: 98%;height: 40px;line-height: 40px;padding-left: 5px;font-weight: bold;font-size: 1.2em;">
                         </p>
                     </section>
                 </section>
