--- a/application/index/view/index/assit.html
+++ b/application/index/view/index/assit.html
@@ -21,7 +21,7 @@
                                 活动详情
                             </p>
                         </section>
-                        <section></section>
+
                     </section>
                 </section>
                 <section>
@@ -39,6 +39,10 @@
                         <p>
                             <input type="url" value="http://wx.haixialiangan.wang/?share_id={$user_id}" style="width: 98%;height: 40px;line-height: 40px;padding-left: 5px;font-weight: bold;font-size: 1.2em;">
                         </p>
+                    </section>
+                    <br/>
+                    <section style="width: 100%;text-align: center;">
+                        <button style="padding: 8px 30px;background: #0a2b1d;color: white;border: 0;border-radius: 1em;font-size: 1.2em;" onclick="window.location.href='/';">返回</button>
                     </section>
                 </section>
             </section>
