--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -25,9 +25,9 @@
                     <video  src="{$current_video_url}" width="100%"  autoplay height="280px" controls="" x5-playsinline="" playsinline="" webkit-playsinline="" preload="auto"></video>
                 </div>
             </div>
-            <ul class="abc">
+           <!-- <ul class="abc">
                 <li class="mcen">请点击上面<img src="/assets/img/right.png" style="width:14px;margin:0 2px" />按钮播放</li>
-            </ul>
+            </ul>-->
             <div class="gunad">
                 <marquee scrollamount="3">方便下次观看，请点击右上角按钮↑，❤收藏❤本网址</marquee>
             </div>
