--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -13,7 +13,7 @@
     {if condition = "empty($current_video_url)"}
     <legend style="padding:1%;line-height: 30px;font-size: 1.5em;background: red;color:white;text-align: center;width: 98%">{$msg}</legend>
     {else /}
-    <header style="height: 30px;line-height: 30px;width: 98%;background: #000;color: red;text-align: left;padding: 0 1%;overflow: hidden;">
+    <header style="height: 30px;line-height: 30px;width: 98%;background: #000;color: red;text-align: left;padding: 0 1%;overflow: hidden;border-bottom: 1px solid #e6e6e6;">
         <div style="float: left;">恭喜你成为本站第{$user_id}位会员</div>
         <div style="float: right;">会员剩余<strong>{$left_days}</strong>天</div>
     </header>
