--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -21,8 +21,9 @@
     <div class="my_box mt_20">
         <div class="about_box">
             <div class="txt">
-                <div>
+                <div style="position: relative;">
                     <video  src="{$current_video_url}" width="100%"  autoplay height="280px" controls="" x5-playsinline="" playsinline="" webkit-playsinline="" preload="auto"></video>
+                    <div style="position: absolute;bottom: 0;right: 0;padding: 3px 8px;background: #000;color: white;">{$current_video_name}</div>
                 </div>
             </div>
            <!-- <ul class="abc">
