--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -23,7 +23,7 @@
             <div class="txt">
                 <div style="position: relative;">
                     <video  src="{$current_video_url}" width="100%"  autoplay height="280px" controls="" x5-playsinline="" playsinline="" webkit-playsinline="" preload="auto"></video>
-                    <div style="position: absolute;bottom: 0;right: 0;padding: 3px 8px;background: #000;color: white;">{$current_video_name}</div>
+                    <div style="position: absolute;bottom: 7px;right: 0;padding: 3px 8px;background: #000;color: white; width: 20%;text-align: center;">{$current_video_name}</div>
                 </div>
             </div>
            <!-- <ul class="abc">
