--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -23,8 +23,8 @@
             <div class="txt">
                 <div style="position: relative;">
                     <video  src="{$current_video_url}" width="100%"  autoplay height="280px" controls="" x5-playsinline="" playsinline="" webkit-playsinline="" preload="auto"></video>
-                    <div style="position: absolute;bottom: 12px;right: 0;padding: 5px 8px;background: #555;color: white; width: 20%;text-align: center;z-index: 9999;">{$current_video_name}</div>
-                </div>
+<!--                    <div style="position: absolute;bottom: 12px;right: 0;padding: 5px 8px;background: #555;color: white; width: 20%;text-align: center;z-index: 9999;">{$current_video_name}</div>
+               --> </div>
             </div>
            <!-- <ul class="abc">
                 <li class="mcen">请点击上面<img src="/assets/img/right.png" style="width:14px;margin:0 2px" />按钮播放</li>
