--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -24,7 +24,7 @@
                 <div style="position: relative;">
                    <!-- <video  src="{$current_video_url}" width="100%"  autoplay height="auto" controls="" x5-playsinline="" playsinline -webkit-playsinline preload="auto"></video>-->
                     <div class="video" style="width: 100%;height: auto;"></div>
-                    <div style="position: absolute;bottom: 12px;right: 0;padding: 5px 8px;background: #555;color: white; width: 20%;text-align: center;z-index: 9999;">{$current_video_name}</div>
+                    <!--<div style="position: absolute;bottom: 12px;right: 0;padding: 1% 2%;background: #555;color: white; width: 20%;text-align: center;z-index: 9999;">{$current_video_name}</div>-->
                 </div>
             </div>
            <!-- <ul class="abc">
