--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -23,7 +23,7 @@
             <div class="txt">
                 <div style="position: relative;">
                     <video  src="{$current_video_url}" width="100%"  autoplay height="auto" controls="" x5-playsinline="true"  preload="auto"  preload="load" playsinline="true" webkit-playsinline="true" x5-video-player-type="h5"></video>
-                    <div style="position: absolute;bottom: 12px;right: 0;padding: 2% 4%;background: #555;color: white; width: 20%;text-align: center;z-index: 9999;">{$current_video_name}</div>
+                    <div style="position: absolute;bottom: 12px;right: 1%;padding: 1% 4%;background: #555;color: white; width: 20%;text-align: center;z-index: 9999;">{$current_video_name}</div>
                 </div>
             </div>
            <!-- <ul class="abc">
