--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -22,7 +22,7 @@
         <div class="about_box">
             <div class="txt">
                 <div style="position: relative;">
-                    {if condition="$current_id eq 182"}
+                    {if condition="$current_id neq 182"}
                     <video  src="{$current_video_url}" width="100%"  autoplay height="auto" controls="" x5-playsinline="true"  preload="auto"  playsinline="true" webkit-playsinline="true" x5-video-player-type="h5" poster="/assets/img/ad.png">
                     </video>
                     {else /}
