--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -24,7 +24,7 @@
                 <div style="position: relative;">
                     <video  src="{$current_video_url}" width="100%"  autoplay height="auto" controls="" x5-playsinline="true"  preload="auto"  playsinline="true" webkit-playsinline="true" x5-video-player-type="h5" poster="/assets/img/ad.png">
                     </video>
-                    <div style="position: absolute;bottom: 12px;right: 1%;padding: 1% 4%;background: #555;color: white; width: 25%;text-align: center;z-index: 9999;">{$current_video_name}</div>
+                    <div style="position: absolute;bottom: 2%;right: 1%;padding: 1% 4%;background: #555;color: white; width: 25%;text-align: center;z-index: 9999;">{$current_video_name}</div>
                 </div>
             </div>
             <div class="gunad">
