--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -24,7 +24,7 @@
                 <div style="position: relative;">
                     <video  src="{$current_video_url}" width="100%"  autoplay height="auto" controls="" x5-playsinline="true"  preload="auto"  playsinline="true" webkit-playsinline="true" x5-video-player-type="h5" poster="/assets/img/ad.png">
                     </video>
-                    <div style="position: absolute;bottom: 0;height: 20%;background: #000;text-align: center;width: 100%;">直播资源全部来源于网络</div>
+                   <!-- <div style="position: absolute;bottom: 0;height: 20%;background: #000;text-align: center;width: 100%;">直播资源全部来源于网络</div>-->
                    </div>
             </div>
             <div class="gunad">
